--- a/app.json
+++ b/app.json
@@ -1,41 +1,65 @@
 {
   "expo": {
-    "name": "fieldlog",
+    "name": "FieldLog",
     "slug": "fieldlog",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.yourcompany.fieldlog",
+      "buildNumber": "1",
+      "infoPlist": {
+        "NSCameraUsageDescription": "FieldLog needs access to your camera to take pictures for notes.",
+        "NSLocationWhenInUseUsageDescription": "FieldLog needs access to your location to add location data to notes.",
+        "NSMicrophoneUsageDescription": "FieldLog needs access to your microphone to record voice notes.",
+        "NSPhotoLibraryUsageDescription": "FieldLog needs access to your photo library to add images to notes."
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.yourcompany.fieldlog",
+      "versionCode": 1,
+      "permissions": [
+        "CAMERA", 
+        "ACCESS_FINE_LOCATION", 
+        "RECORD_AUDIO", 
+        "READ_EXTERNAL_STORAGE", 
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      "expo-camera",
+      "expo-location",
+      "expo-media-library",
       [
-        "expo-splash-screen",
+        "expo-build-properties",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "ios": {
+            "useFrameworks": "static"
+          }
         }
       ]
     ],
-    "experiments": {
-      "typedRoutes": true
+    "extra": {
+      "eas": {
+        "projectId": "your-eas-project-id"
+      }
     }
   }
 }
